--- a/studybud/base/templates/base/register.html
+++ b/studybud/base/templates/base/register.html
@@ -6,7 +6,13 @@
   <div class="card shadow p-4" style="width: 500px">
     <h3 class="text-center mb-4">Create New Account</h3>
     <form method="POST" action="">
-      {% csrf_token %}{{ form.as_p }}
+      {% csrf_token %} {% for field in form %}
+      <div class="mb-3">
+        <label class="form-label">{{field.label}}</label>
+        <br />
+        {{ field }}
+      </div>
+      {% endfor %}
       <div class="d-grid">
         <input type="submit" class="btn btn-primary btn-lg" value="Register" />
       </div>
