--- a/studybud/templates/navbar.html
+++ b/studybud/templates/navbar.html
@@ -19,25 +19,36 @@
     <!-- Navbar content -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!-- Left side -->
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <span class="nav-link disabled text-light">
-            Hello {{ request.user }}
-          </span>
-        </li>
-      </ul>
-
-      <!-- Center nav links -->
       <ul class="navbar-nav mx-auto">
-        {% if request.user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        {% if not request.user.is_authenticated %}
+        <li>
+          <a class="dropdown-item text-white" href="{% url 'login' %}">Login</a>
         </li>
         {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'login' %}">Login</a>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Hello {{ request.user }}
+          </a>
+          <ul class="dropdown-menu">
+            {% if request.user == user %}
+            <li>
+              <a class="dropdown-item" href="{% url 'update-profile'  %}"
+                >Edit User</a
+              >
+            </li>
+            {% endif %}
+            <li>
+              <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+            </li>
+            {% endif %}
+          </ul>
         </li>
-        {% endif %}
       </ul>
 
       <!-- Right search box -->
