--- a/course_3/templates/pages/articles/detail.html
+++ b/course_3/templates/pages/articles/detail.html
@@ -1,5 +1,11 @@
 {% extends "layout/base.html" %} {% block content %}
-<div class="row mt-5">
+<div class="row mt-3">
+  <div class="d-flex align-content-start justify-content-start mb-3">
+    <button class="btn btn-secondary" onclick="window.history.back()">
+      <i class="bi bi-arrow-left"></i>
+      Back
+    </button>
+  </div>
   <div class="col-lg-12">
     <div class="card">
       <div class="card-header">{{ object.title }}</div>
