--- a/course_3/templates/pages/articles/detail.html
+++ b/course_3/templates/pages/articles/detail.html
@@ -1,18 +1,27 @@
 {% extends "layout/base.html" %} {% block content %}
-<div class="row mt-3">
-  <div class="d-flex align-content-start justify-content-start mb-3">
-    <button class="btn btn-secondary" onclick="window.history.back()">
-      <i class="bi bi-arrow-left"></i>
-      Back
+<div class="container mt-4">
+  <div class="d-flex align-items-center mb-3">
+    <button
+      class="btn btn-outline-primary btn-sm"
+      onclick="window.history.back()"
+    >
+      <i class="bi bi-arrow-left"></i> Back
     </button>
   </div>
-  <div class="col-lg-12">
-    <div class="card">
-      <div class="card-header">{{ object.title }}</div>
-      <div class="card-body">
-        <h5 class="card-title">{{ object.title }}</h5>
-        <p class="card-text">{{ object.content }}</p>
-      </div>
+
+  <div class="card shadow-sm border-0">
+    <div class="card-header bg-primary text-white">
+      <h4 class="mb-0">{{ object.title }}</h4>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title text-secondary">{{ object.title }}</h5>
+      <p class="card-text">{{ object.content }}</p>
+      <hr />
+      <p class="card-text">
+        <small class="text-muted"
+          >✍️ Author: {{ object.user|default:"Anonymous" }}
+        </small>
+      </p>
     </div>
   </div>
 </div>
