--- a/course_3/templates/pages/home.html
+++ b/course_3/templates/pages/home.html
@@ -1,7 +1,8 @@
 {% extends "layout/base.html" %} {% block content %}
 <div class="container mt-4">
   <!-- Create Article Button -->
-  <div class="d-flex justify-content-end mb-4">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h2>My Articles</h2>
     <a href="{% url 'article-create' %}" class="btn btn-primary">
       <i class="bi bi-plus-circle"></i> Create Article
     </a>
@@ -40,12 +41,15 @@
           </small>
           <div>
             <a
-              href="{% url 'home' %}"
+              href="{% url 'article-update' article.id %}"
               class="btn btn-sm btn-outline-primary me-1"
             >
               <i class="bi bi-pencil-square"></i> Update
             </a>
-            <a href="{% url 'home' %}" class="btn btn-sm btn-outline-danger">
+            <a
+              href="{% url 'article-update' article.id %}"
+              class="btn btn-sm btn-outline-danger"
+            >
               <i class="bi bi-trash"></i> Delete
             </a>
           </div>
